[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menu/Main/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Main/title.png" type="Texture" id=2]
[ext_resource path="res://Menu/Main/main-menu-background.png" type="Texture" id=3]
[ext_resource path="res://Menu/Resources/play-unpressed.png" type="Texture" id=4]
[ext_resource path="res://Menu/Resources/play-pressed.png" type="Texture" id=5]
[ext_resource path="res://Menu/Resources/help-unpressed.png" type="Texture" id=6]
[ext_resource path="res://Menu/Resources/help-pressed.png" type="Texture" id=7]
[ext_resource path="res://Menu/Resources/options-unpressed.png" type="Texture" id=8]
[ext_resource path="res://Menu/Resources/options-pressed.png" type="Texture" id=9]
[ext_resource path="res://Menu/Resources/credits-unpressed.png" type="Texture" id=10]
[ext_resource path="res://Menu/Resources/credits-pressed.png" type="Texture" id=11]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="TextureRect" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 1920.0
margin_bottom = 253.0
rect_min_size = Vector2( 1080, 230 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="MenuBackground" type="TextureRect" parent="VBoxContainer"]
margin_top = 257.0
margin_right = 1920.0
margin_bottom = 1057.0
rect_min_size = Vector2( 1080, 800 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MenuBackground"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -830.0
rect_min_size = Vector2( 0, 800 )
rect_clip_content = true
custom_constants/separation = 25
alignment = 1

[node name="playbutton" type="TextureButton" parent="VBoxContainer/MenuBackground/VBoxContainer"]
margin_top = 60.0
margin_right = 830.0
margin_bottom = 211.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
stretch_mode = 3

[node name="helpbutton" type="TextureButton" parent="VBoxContainer/MenuBackground/VBoxContainer"]
margin_top = 236.0
margin_right = 830.0
margin_bottom = 387.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
stretch_mode = 3

[node name="optionsbutton" type="TextureButton" parent="VBoxContainer/MenuBackground/VBoxContainer"]
margin_top = 412.0
margin_right = 830.0
margin_bottom = 563.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
stretch_mode = 3

[node name="creditsbutton" type="TextureButton" parent="VBoxContainer/MenuBackground/VBoxContainer"]
margin_top = 588.0
margin_right = 830.0
margin_bottom = 739.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
stretch_mode = 3

[connection signal="pressed" from="VBoxContainer/MenuBackground/VBoxContainer/playbutton" to="." method="_on_playbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuBackground/VBoxContainer/helpbutton" to="." method="_on_helpbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuBackground/VBoxContainer/optionsbutton" to="." method="_on_optionsbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuBackground/VBoxContainer/creditsbutton" to="." method="_on_creditsbutton_pressed"]
